--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.33",
     "prettier": "^3.0.3",
+    "sass": "^1.69.7",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.10"
   }
